--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,7 @@
 $color: steelblue;
 
-.my-flix {
-  color: $color;
-}
+$primary: rgb(69, 71, 139);
+$body-bg: rgb(241, 241, 248);
+$secondary: rgb(151, 148, 190);
+
+@import "~bootstrap/scss/bootstrap.scss";
