--- a/src/components/MovieCard/movie-card.scss
+++ b/src/components/MovieCard/movie-card.scss
@@ -1,3 +1,19 @@
 .link-card {
-  text-decoration: none;
+  margin-bottom: 15px;
+  figure {
+    position: relative;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    Button {
+      display: block;
+      margin: auto;
+    }
+  }
+}
+
+.img {
+  height: 300px;
+  margin: auto;
+  padding: 20px;
 }
