--- a/src/components/MovieView/movie-view.scss
+++ b/src/components/MovieView/movie-view.scss
@@ -1,14 +1,20 @@
-.title {
-  margin: 24px 0 16px;
-}
-.back-button {
-  padding: 4px 12px 4px 12px;
-  color: whitesmoke;
-  background-color: dodgerblue;
-  border: none;
-  border-radius: 4px;
-}
-img {
-  margin-bottom: 16px;
-  border-radius: 4px;
+.movieView {
+  display: flex;
+  justify-content: left;
+  align-items: center;
+  box-shadow: 1em 1em 2em 0.25em #000000;
+
+  img {
+    height: auto;
+    max-width: 300px;
+    box-shadow: 0em 0em 2em 0.25em #000000;
+    margin: 2em 0em;
+    border: 6px solid #6f2f2f;
+  }
+
+  .card-body {
+    background-color: white;
+    border: 6px solid #6f2f2f;
+    border-style: inset;
+  }
 }
