--- a/src/components/login-view/login-view.scss
+++ b/src/components/login-view/login-view.scss
@@ -1,28 +1,7 @@
-@import "~bootstrap/scss/bootstrap.scss";
+@import "../../index.scss";
 
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-.favMov {
-  display: flex;
-  justify-content: space-between;
-}
-
-.remFavMov {
-  cursor: pointer;
-}
-
-.profileCard.card {
-  background-color: white;
-}
-
-.largeLabel {
-  font-size: 1.5em;
-}
-
-.updateForm {
+.loginForm {
+  max-width: 300px;
   margin: 30px 0px;
   padding: 20px;
   border: 1px solid $gray-400;
@@ -51,14 +30,14 @@ ul {
   button {
     width: 100%;
     padding: $btn-padding-y $btn-padding-x;
-    background-color: $success;
+    background-color: $primary;
     color: $white;
     border: none;
     border-radius: $border-radius;
     cursor: pointer;
 
     &:hover {
-      background-color: darken($success, 10%);
+      background-color: darken($primary, 10%);
     }
   }
 }
